ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement2/input.ts.stderr
error: Return statement is not allowed here
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement2/input.ts:2:4
  |
2 |    return;
  |    ^^^^^^^

